fix: debug war